--- a/src/main/webapp/proprietario.xhtml
+++ b/src/main/webapp/proprietario.xhtml
@@ -25,7 +25,7 @@
 
 				</h:panelGrid>
 				<p:commandButton value="Cadastrar"
-					action="#{proprietarioBean.salvar}" />
+					action="#{proprietarioBean.salvar}" update="@form"/>
 			</p:panel>
 		</h:form>
 	</ui:define>
